test/fail/variablerhnotdefined.app
//Variable 'a' not defined a
application test

section functions

globals {
  function do() {
    var b : Int;
    b := a;
  }
}